Attempt to fix double rsvp scroll on mobile

--- a/www/assets/site.css
+++ b/www/assets/site.css
@@ -163,6 +163,7 @@ h4 {
 
   .content.rsvp {
     padding-top: 0px;
+    min-height: 1000px;
   }
 
   .column-left {
